--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
       </div>
       <div class="mt-6 border-b-2 border-b-red-600 w-11/12 mx-auto"></div>
     </header>
-    
+    <main>
+     
     <script src="app.js"></script>
   </body>
 </html>
