--- a/index.html
+++ b/index.html
@@ -369,6 +369,414 @@
               </div>
 
             
+
+              <div class="text-yellow-500">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star-half-stroke"></i>
+              </div>
+
+              <div class="card-actions justify-end">
+                <label
+                  for="my-modal-4"
+                  class="btn modal-button"
+                  onclick="modal('0282e0e58a5c404fbd15261f11c2ab6a')"
+                  ><i class="fa-solid fa-arrow-right"></i
+                ></label>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div
+          class="
+            card
+            lg:card-side
+            bg-gray-100
+            shadow-xl
+            lg:p-4
+            mb-5
+            w-11/12
+            lg:w-full
+            mx-auto
+          "
+        >
+          <figure class="lg:w-1/4">
+            <img
+              src="https://i.ibb.co/k8XBcMX/unsplash-Eh-Tc-C9s-YXsw-15.png"
+              alt="Movie"
+            />
+          </figure>
+          <div class="card-body lg:w-3/4 text-black">
+            <h2 class="card-title">
+              Tucker Carlson Swears Vladimir Putin Is Winning The War In Ukraine
+            </h2>
+            <p>
+              Tucker Carlson has rarely met a dictator's ass he didn't want to
+              kiss, and Vladimir Putin is at the very top of that puckering up
+              list. The Fox News host is something of a folk hero in Russia:
+              Because of the pro-Putin propaganda he so often spews, the Kremlin
+              has encouraged Russia's state TV to air as much of Tucker's face
+              as possible — and they're certain to love his latest rant about
+              how Putin i .....
+            </p>
+            <div class="card-actions justify-between items-center">
+              <div class="flex">
+                <div class="mr-3">
+                  <img
+                    class="w-[40px] rounded-full"
+                    src="https://images.unsplash.com/photo-1633332755192-727a05c4013d?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8dXNlcnxlbnwwfHwwfHw%3D&amp;w=1000&amp;q=80"
+                    alt=""
+                  />
+                </div>
+                <div>
+                  <h4 class="font-bold text-xl">Jennifer Wood</h4>
+                  <h5>2022-08-30 16:38:45</h5>
+                </div>
+              </div>
+
+              <div class="flex">
+                <div>
+                  <img src="img/icons8-eye-24.png" alt="" />
+                </div>
+                <div class="flex ml-3 items-center">
+                  <h1><span>400</span> M</h1>
+                </div>
+              </div>
+
+              <div class="text-yellow-500">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star-half-stroke"></i>
+              </div>
+
+              <div class="card-actions justify-end">
+                <label
+                  for="my-modal-4"
+                  class="btn modal-button"
+                  onclick="modal('f69a695f037cd9484cecaea37ca71011')"
+                  ><i class="fa-solid fa-arrow-right"></i
+                ></label>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div
+          class="
+            card
+            lg:card-side
+            bg-gray-100
+            shadow-xl
+            lg:p-4
+            mb-5
+            w-11/12
+            lg:w-full
+            mx-auto
+          "
+        >
+          <figure class="lg:w-1/4">
+            <img
+              src="https://i.ibb.co/1vcgPzg/unsplash-Eh-Tc-C9s-YXsw-12.png"
+              alt="Movie"
+            />
+          </figure>
+          <div class="card-body lg:w-3/4 text-black">
+            <h2 class="card-title">
+              U.S. announces largest weapons package for Ukraine
+            </h2>
+            <p>
+              People's Daily Online (Xinhua) 08:16, August 25, 2022 The United
+              States has committed more than 13.5 billion dollars in security
+              assistance to Ukraine since President Joe Biden took office.
+              WASHINGTON, Aug. 24 (Xinhua) -- The United States on Wednesday
+              announced an additional tranche of security assistance to Ukraine
+              worth nearly 3 billion U.S. dollars, the largest one-time weapons
+              aid to Kiev tha .....
+            </p>
+            <div class="card-actions justify-between items-center">
+              <div class="flex">
+                <div class="mr-3">
+                  <img
+                    class="w-[40px] rounded-full"
+                    src="https://images.unsplash.com/photo-1633332755192-727a05c4013d?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8dXNlcnxlbnwwfHwwfHw%3D&amp;w=1000&amp;q=80"
+                    alt=""
+                  />
+                </div>
+                <div>
+                  <h4 class="font-bold text-xl">John Pike</h4>
+                  <h5>2022-08-25 07:35:11</h5>
+                </div>
+              </div>
+
+              <div class="flex">
+                <div>
+                  <img src="img/icons8-eye-24.png" alt="" />
+                </div>
+                <div class="flex ml-3 items-center">
+                  <h1><span>320</span> M</h1>
+                </div>
+              </div>
+
+              <div class="text-yellow-500">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star-half-stroke"></i>
+              </div>
+
+              <div class="card-actions justify-end">
+                <label
+                  for="my-modal-4"
+                  class="btn modal-button"
+                  onclick="modal('30af81e91ab3eafc0bcae0de62f55d5c')"
+                  ><i class="fa-solid fa-arrow-right"></i
+                ></label>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div
+          class="
+            card
+            lg:card-side
+            bg-gray-100
+            shadow-xl
+            lg:p-4
+            mb-5
+            w-11/12
+            lg:w-full
+            mx-auto
+          "
+        >
+          <figure class="lg:w-1/4">
+            <img
+              src="https://i.ibb.co/dr4TRY4/unsplash-Eh-Tc-C9s-YXsw-21.png"
+              alt="Movie"
+            />
+          </figure>
+          <div class="card-body lg:w-3/4 text-black">
+            <h2 class="card-title">
+              US to name military mission in Ukraine and appoint commander – WSJ
+            </h2>
+            <p>
+              Illustrative public photo In the coming weeks, the Joe Biden
+              administration plans to name its military mission to support
+              Ukraine and appoint a general to lead the military training and
+              relief efforts. This is reported by The Wall Street Journal,
+              citing US officials. The name of the operation formally recognizes
+              US military support, akin to how the Pentagon dubbed the missions
+              in Iraq and Afghanis .....
+            </p>
+            <div class="card-actions justify-between items-center">
+              <div class="flex">
+                <div class="mr-3">
+                  <img
+                    class="w-[40px] rounded-full"
+                    src="https://images.unsplash.com/photo-1633332755192-727a05c4013d?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8dXNlcnxlbnwwfHwwfHw%3D&amp;w=1000&amp;q=80"
+                    alt=""
+                  />
+                </div>
+                <div>
+                  <h4 class="font-bold text-xl">Kumar Natasha</h4>
+                  <h5>2022-08-26 12:15:36</h5>
+                </div>
+              </div>
+
+              <div class="flex">
+                <div>
+                  <img src="img/icons8-eye-24.png" alt="" />
+                </div>
+                <div class="flex ml-3 items-center">
+                  <h1><span>231</span> M</h1>
+                </div>
+              </div>
+              <div class="card-actions justify-end">
+                <label
+                  for="my-modal-4"
+                  class="btn modal-button"
+                  onclick="modal('be44c843d61859cc0b87cae85c55f9db')"
+                  ><i class="fa-solid fa-arrow-right"></i
+                ></label>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div
+          class="
+            card
+            lg:card-side
+            bg-gray-100
+            shadow-xl
+            lg:p-4
+            mb-5
+            w-11/12
+            lg:w-full
+            mx-auto
+          "
+        >
+          <figure class="lg:w-1/4">
+            <img
+              src="https://i.ibb.co/HXC719r/unsplash-Eh-Tc-C9s-YXsw-19.png"
+              alt="Movie"
+            />
+          </figure>
+          <div class="card-body lg:w-3/4 text-black">
+            <h2 class="card-title">
+              U.S. concerned about India's participation in Russia military
+              exercises
+            </h2>
+            <p>
+              Last month, Moscow announced plans to hold Vostok (East) exercises
+              from Aug. 30 to Sept. 5, even as it wages a costly war in Ukraine.
+              The military exercises are expected to include China, India,
+              Belarus, Mongolia, Tajikistan and other countries, China's defense
+              ministry has said. Asked about India's participation, Jean-Pierre
+              told reporters as President Joe Biden flew to Pennsylvania that
+              the .....
+            </p>
+            <div class="card-actions justify-between items-center">
+              <div class="flex">
+                <div class="mr-3">
+                  <img
+                    class="w-[40px] rounded-full"
+                    src="https://images.unsplash.com/photo-1633332755192-727a05c4013d?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8dXNlcnxlbnwwfHwwfHw%3D&amp;w=1000&amp;q=80"
+                    alt=""
+                  />
+                </div>
+                <div>
+                  <h4 class="font-bold text-xl">MarketScreener</h4>
+                  <h5>2022-08-30 18:05:42</h5>
+                </div>
+              </div>
+
+              <div class="flex">
+                <div>
+                  <img src="img/icons8-eye-24.png" alt="" />
+                </div>
+                <div class="flex ml-3 items-center">
+                  <h1><span>89</span> M</h1>
+                </div>
+              </div>
+
+              <div class="text-yellow-500">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star-half-stroke"></i>
+              </div>
+
+              <div class="card-actions justify-end">
+                <label
+                  for="my-modal-4"
+                  class="btn modal-button"
+                  onclick="modal('919db97c34e0778b387dd40cdfa08130')"
+                  ><i class="fa-solid fa-arrow-right"></i
+                ></label>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div
+          class="
+            card
+            lg:card-side
+            bg-gray-100
+            shadow-xl
+            lg:p-4
+            mb-5
+            w-11/12
+            lg:w-full
+            mx-auto
+          "
+        >
+          <figure class="lg:w-1/4">
+            <img
+              src="https://i.ibb.co/QnwC4sG/unsplash-Eh-Tc-C9s-YXsw-11.png"
+              alt="Movie"
+            />
+          </figure>
+          <div class="card-body lg:w-3/4 text-black">
+            <h2 class="card-title">
+              Biden announces $3 billion Ukraine military aid package on its
+              Independence Day
+            </h2>
+            <p>
+              Published: 25 Aug 2022, 09: 09 US president Joe Biden speaks as he
+              attends the first virtual meeting of the I2U2 group with Israeli
+              prime minister Yair Lapid and leaders of India and the United Arab
+              Emirates, in Jerusalem 14 July, 2022ReutersUS President Joe Biden
+              marked Ukraine's Independence Day on Wednesday with $3 billion in
+              security assistance, Washington's largest aid package since Russi
+              .....
+            </p>
+            <div class="card-actions justify-between items-center">
+              <div class="flex">
+                <div class="mr-3">
+                  <img
+                    class="w-[40px] rounded-full"
+                    src="https://images.unsplash.com/photo-1633332755192-727a05c4013d?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8dXNlcnxlbnwwfHwwfHw%3D&amp;w=1000&amp;q=80"
+                    alt=""
+                  />
+                </div>
+                <div>
+                  <h4 class="font-bold text-xl">Reuters</h4>
+                  <h5>2022-08-25 03:09:16</h5>
+                </div>
+              </div>
+
+              <div class="flex">
+                <div>
+                  <img src="img/icons8-eye-24.png" alt="" />
+                </div>
+                <div class="flex ml-3 items-center">
+                  <h1><span>no views</span> M</h1>
+                </div>
+              </div>
+
+              <div class="text-yellow-500">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star-half-stroke"></i>
+              </div>
+
+              <div class="card-actions justify-end">
+                <label
+                  for="my-modal-4"
+                  class="btn modal-button"
+                  onclick="modal('7c4dfea0fafddc813673282a428429b7')"
+                  ><i class="fa-solid fa-arrow-right"></i
+                ></label>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- modal -->
+      <input type="checkbox" id="my-modal-4" class="modal-toggle" />
+      <div class="modal">
+        <div class="modal-box relative">
+          <label
+            for="my-modal-4"
+            class="btn btn-sm btn-circle absolute right-2 top-2"
+            >✕</label
+          >
+          <div id="modal-body"></div>
+        </div>
+      </div>
+    </main>
+    <!-- footer -->
+    <footer class="footer footer-center p-10 bg-gray-600 text-white rounded">
+      <div>
+        <p>Copyright © 2022-2023</p>
+      </div>
+    </footer>
     <script src="app.js"></script>
   </body>
 </html>
