--- a/index.html
+++ b/index.html
@@ -368,7 +368,14 @@
                 </div>
               </div>
 
-            
+              <div class="flex">
+                <div>
+                  <img src="img/icons8-eye-24.png" alt="" />
+                </div>
+                <div class="flex ml-3 items-center">
+                  <h1><span>488</span> M</h1>
+                </div>
+              </div>
 
               <div class="text-yellow-500">
                 <i class="fa-solid fa-star"></i>
@@ -758,19 +765,7 @@
           </div>
         </div>
       </section>
-      <!-- modal -->
-      <input type="checkbox" id="my-modal-4" class="modal-toggle" />
-      <div class="modal">
-        <div class="modal-box relative">
-          <label
-            for="my-modal-4"
-            class="btn btn-sm btn-circle absolute right-2 top-2"
-            >✕</label
-          >
-          <div id="modal-body"></div>
-        </div>
-      </div>
-    </main>
+     
     <!-- footer -->
     <footer class="footer footer-center p-10 bg-gray-600 text-white rounded">
       <div>
