--- a/index.html
+++ b/index.html
@@ -765,13 +765,20 @@
           </div>
         </div>
       </section>
-     
-    <!-- footer -->
-    <footer class="footer footer-center p-10 bg-gray-600 text-white rounded">
-      <div>
-        <p>Copyright © 2022-2023</p>
+      <!-- modal -->
+      <input type="checkbox" id="my-modal-4" class="modal-toggle" />
+      <div class="modal">
+        <div class="modal-box relative">
+          <label
+            for="my-modal-4"
+            class="btn btn-sm btn-circle absolute right-2 top-2"
+            >✕</label
+          >
+          <div id="modal-body"></div>
+        </div>
       </div>
-    </footer>
+    </main>
+   
     <script src="app.js"></script>
   </body>
 </html>
