--- a/index.html
+++ b/index.html
@@ -778,7 +778,12 @@
         </div>
       </div>
     </main>
-   
+    <!-- footer -->
+    <footer class="footer footer-center p-10 bg-gray-600 text-white rounded">
+      <div>
+        <p>Copyright © 2022-2023</p>
+      </div>
+    </footer>
     <script src="app.js"></script>
   </body>
 </html>
