--- a/blog.html
+++ b/blog.html
@@ -21,7 +21,22 @@
              <div class="flex-1">
                <a class="text-2xl text-red-600 font-bold normal-case"><span class="text-white bg-red-600 p-2 rounded-md">Sky</span> News</a>
              </div>
-             
+             <div class="flex-none ">
+              <div class="mr-5 text-xl font-bold text-red-600">
+                 <a class="inline-block mr-5  " href="index.html" target="_blank">News</a>
+                 <a class="text-white-600 border-b-2 border-b-red-400" href="blog.html" target="_blank">Blog</a>
+              </div>
+               <div class="dropdown dropdown-end">
+                 <label tabindex="0" class="btn btn-ghost btn-circle avatar">
+                   <div class="w-10 rounded-full">
+                     <img src="https://placeimg.com/80/80/people">
+                   </div>
+                 </label>
+                 <ul tabindex="0" class="menu menu-compact dropdown-content mt-3 p-2 shadow bg-gray-100 rounded-box w-52">
+                   <li>
+                     <a class="justify-between">
+                       Profile
+                       <span class="badge">New</span>
                      </a>
                    </li>
                    <li><a>Settings</a></li>
@@ -138,7 +153,7 @@
               <div>
                 <p>Copyright © 2022-2023</p>
               </div>
-        </footer>
+            </footer>
 <script src="https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"></script>
 </body>
 </html>
